refactoring xml services